HIA-697 - Thin Slice for Prison Office Manager (#400)
* HIA-697 - Gateway created + new upstream API

* HIA-697 Added Service for Prison Officer Manager API

* HIA-697 - Added additional models required

* Renamed according to acronym

* Committed wrong file, controller-side of things not ready yet

* HIA-697 - NDelius retrieve community-manager related data

* HIA-697: Adding the service related to community manager

* HIA-697 - Adding controller and initial test

* Missed one import

* HIA-697 - Added unit test for controller.

* HIA-697 - WIP Smoke test

* WIO - Adding actual data in smoke

* Smoke test ok

* Delete localstack/cache directory

* update openapi.yml

* update CaseSentence as per update stream open api

* Undo changes

* update open api parameter name

* Temporary fix for epf smoke test

---------
