# src/main/kotlin/uk/gov/justice/digital/hmpps/hmppsintegrationapi/models/ndelius/NDeliusName.kt
@@ -1,0 +1,6 @@
+package uk.gov.justice.digital.hmpps.hmppsintegrationapi.models.ndelius
+
+data class NDeliusName(
+  val forename: String? = null,
+  val surname: String? = null,
+)
